--- a/inlamning1/views/checkout.html
+++ b/inlamning1/views/checkout.html
@@ -14,9 +14,9 @@
         </h1>
     </header>
 
-    <div id="regis">
+    <form id="regis">
 
-    </div>
+    </form>
         <script src="../script/checkout.js"></script>
 </body>
 </html>
