--- a/inlamning1/views/checkout.html
+++ b/inlamning1/views/checkout.html
@@ -15,6 +15,7 @@
     </header>
 
     <form id="regis">
+        <p id="good"></p>
 
     </form>
         <script src="../script/checkout.js"></script>
