--- a/inlamning1/views/checkout.html
+++ b/inlamning1/views/checkout.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="../css/stylesheet.css">
+  
 </head>
 <body>
     <header>
@@ -14,10 +15,27 @@
         </h1>
     </header>
 
-    <form id="regis">
-        <p id="good"></p>
+    <fieldset class="field">
+        <em>First Name :</em>
+        <input type="text" id="fName">
+        <em>Last Name : </em>
+        <input type="text" id="lName">
+        <em>Email :</em>
+        <input type="email" id="email">
+        <em>Tel. :</em>
+        <input type="tel" id="tele">
+        <em>City</em>
+        <input type="text" id="city">
+        <em>Address</em>
+        <input type="text" id="address">
+        <em>Zip code :</em>
+        <input type="text" id="zipCode">
+        <em>Type comment:</em>
+        <textarea cols="53" rows="5" id="commentField"></textarea>
+        <button onclick="formvalidation()">send</button>
+    </fieldset>
 
-    </form>
+  
         <script src="../script/checkout.js"></script>
 </body>
 </html>
