--- a/inlamning3/views/index.html
+++ b/inlamning3/views/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="../css/stylesheet.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -13,7 +12,7 @@
         <h1> Nice Web Shop</h1>
     </header>
 
-    <div class="wrapper">
+    <div id="wrapper">
         <nav class="nav">
             <ul>
                 <li>
@@ -24,7 +23,7 @@
                     <li>Total Cost:
                         <span class="currentCartCost"> 0</span>
                     </li>
-
+            </ul>
         </nav>
 
         <main class="main">
@@ -33,9 +32,9 @@
         </main>
 
     </div>
-
-    <a href="products.html">asd</a>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>    <a href="products.html"></a>
     <script src="../script/index.js"></script>
+
 </body>
 
 </html>
