--- a/inlamning4/views/products.html
+++ b/inlamning4/views/products.html
@@ -12,23 +12,9 @@
 </head>
 
 <body>
-    <header>
-        <h1> Nice Web Shop</h1>
-    </header>
-    <div class="contianer">
-    <figure class="starRating">
-        <img src="" alt="" class="reImg"> 
-    </figure>
-    <ul id="ratecv">
-        <i class="far fa-star" id="star1" class="star"></i>
-        <i class="far fa-star" id="star2" class="star current"></i>
-        <i class="far fa-star" id="star3" class="star"></i>
-        <i class="far fa-star" id="star4" class="star"></i>
-        <i class="far fa-star" id="star5" class="star"></i>
-    </ul>
-    <input type="submit" name="add Comment" id="addComment" value="add Coment">
-    <form class="field"></form>
-</div>
+    
+
+<button id="send">send</button>
     <script src="../script/products.js"></script>
 </body>
 
